--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -7,7 +7,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital@0;1&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="../styles/cssClientes.css">
+  <link rel="stylesheet" href="../styles/main.css">
   <link rel="stylesheet" href="../styles/reset.css">
   <title>Clientes</title>
 </head>
@@ -24,13 +24,49 @@
     </div> 
   </nav>
 </header>
-<body>
-  <section class="Hero">
+<body class="bg-body-secondary">
+  <section class="hero m-5">
     <div class="container-lg">
-      <img src="../assets//images/logo site.jpg" alt="">
+        <img class="img-fluid rounded-4 " src="../assets//images/logo site.jpg" alt="">
     </div>
   </section>
-  <section class="Clientes">
+  <section class="card m-5">
+    <div class="container text-center">
+      <div class="row ">
+        <div class="col-sm-4">
+          <div class="card-sm text-bg-secondary">
+          <img src="../assets/images/Office.jpg" alt="escritorio" class="card-img-top ">
+          <div class="card-body">
+            <h5 class="card-title">Smart Monkey</h5>
+              <p class="card-text">Focada em automatizar tarefas e simplificar o dia-a-dia do office!!!</p>
+              <a href="#" class="btn btn-primary">Business</a>
+          </div>
+        </div>
+      </div>
+        <div class="col-sm-4">
+          <div class="card-sm text-bg-secondary">
+          <img src="../assets/images/Accounts.jpg" alt="calculadora" class="card-img-top">
+          <div class="card-body">
+            <h5 class="card-title">Contas</h5>
+              <p class="card-text">Simplificamos o modo de cadastrar contas a receber!!!</p>
+              <a href="#contas" class="btn btn-primary">Teste Já!</a>
+          </div>
+        </div>
+      </div>
+        <div class="col-sm-4">
+          <div class="card-sm text-bg-secondary">
+          <img src="../assets/images/Customers.jpg" alt="clientes" class="card-img-top">
+          <div class="card-body">
+            <h5 class="card-title">Clientes</h5>
+              <p class="card-text">Veja como está intuitivo e eficaz, nossa nova ferramenta de CRM!</p>
+              <a href="#clientes" class="btn btn-primary">Cadastre</a>
+          </div>
+        </div>
+      </div>
+      </div>
+    </div>
+  </section>
+  <section class="clientes" id="clientes">
     <div class="container-lg">
       <h1 class="corTexto" tabindex="0">Clientes</h1>
 
@@ -85,10 +121,10 @@
         <button onclick="atualizaDados()">Salvar</button>
         <button onclick="deletaCliente()">Excluir</button>
     </div>
-    <a href="cadastroCliente.html"><button>Novo Cadastro</button></a>
+    <a href="./Cadastros/cadastroCliente.html"><button>Novo Cadastro</button></a>
     </div>
   </section>
-  <section class="Contas ">
+  <section class="contas" id="contas">
     <div class="container-lg">
       <h1 class="corTexto" tabindex="0">Contas a Receber</h1>
       <input placeholder="Pesquisar pelo CPF/CNPJ, Número da Fatura ou %%% para todas faturas" type="text" id="pesquisarConta" name="pesquisarConta" maxlength="250">
@@ -110,7 +146,7 @@
       </div>
       <button style="display: none" onclick="limparContas()" id="limparContas">Limpar</button>
       <button onclick="pesquisarConta()">Buscar</button>
-      <a href="cadastroConta.html"><button>Adicionar Conta a Receber</button></a>
+      <a href="./Cadastros/cadastroConta.html"><button>Adicionar Conta a Receber</button></a>
     </div>
   </section>
   <script src="../scripts/javascriptClientes.js"></script>
